--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -10,10 +10,19 @@
 <body>
     <div class="background">
         <header>
+            <button class="menu-bar">
+                <i class="fa-solid fa-bars" style="color: #2ecc71;"></i>
+             </button>
             <div class="logo">
+
                 <i class="fa-solid fa-d"></i>
             </div> <!--logo-->
             <div class="cabeçalho-link">
+                <div class="front-end">
+                    <h1 class="front">Front<span class="end">-End</span></h1>
+                </div>
+                
+                
                 <li>
                     <a href="#">Home</a>
                 </li>
