--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                  <a href="#">Sobre</a>
+                  <a href="meio-pagina">Sobre</a>
                 </li>
                 <li>
                     <a href="#">Serviços</a>
