--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             
         </div>
     </div>
-    <div class="meio-pagina">
+    <div id="meio-pagina">
         <div>
             <h3>Ola mundo</h3>
         </div>
